freegeek-build-utils (1.2.45) UNRELEASED; urgency=low

  * Add Daniel Lingle's dvd-wipe script, thanks! (Closes: #36059)

 -- Ryan Niebur <ryan@debian.org>  Sun, 23 Jun 2013 13:37:07 -0700

freegeek-build-utils (1.2.44) freegeek-test; urgency=low

  * basiccheck: improve parsing of the udevadm output for CD drives
  * batterytest: implement question to take to laptops if doing a QC
    and the script has not been ran yet (Closes: #35121)

 -- Ryan Niebur <ryan@debian.org>  Thu, 25 Apr 2013 15:56:04 -0700

freegeek-build-utils (1.2.43) freegeek-test; urgency=low

  * Do not require dmidecode on powerpc

 -- Ryan Niebur <ryan@debian.org>  Tue, 20 Nov 2012 11:44:12 -0800

freegeek-build-utils (1.2.42) freegeek-test; urgency=low

  * Validate the contact ID number when asking the question in printme,
    and also allow re-entry if it is invalid

 -- Ryan Niebur <ryan@debian.org>  Sat, 03 Nov 2012 09:10:46 -0700

freegeek-build-utils (1.2.41) freegeek-test; urgency=low

  * Switch printme to use ruby1.8 for SOAP4R (Closes: #27164)
  * Add a new directory /var/log/freegeek-extras to write a printme.log
    into for the firefox output (Closes: #31488)

 -- Ryan Niebur <ryan@debian.org>  Sat, 27 Oct 2012 16:24:29 -0700

freegeek-build-utils (1.2.40) freegeek-test; urgency=low

  * Udev reports 'node not found' errors from when checking LVM volumes
    for CD drives, so fix freegeek_show_cd_drives to not call myudevinfo
    on the dm-* devices from /sys/block/

 -- Ryan Niebur <ryan@debian.org>  Sat, 27 Oct 2012 10:48:34 -0700

freegeek-build-utils (1.2.39) freegeek-test; urgency=low

  * Fix accidental checkin of debug code

 -- Ryan Niebur <ryan@debian.org>  Wed, 24 Oct 2012 11:08:47 -0700

freegeek-build-utils (1.2.38) freegeek-test; urgency=low

  * Add a script named extend-filesystem which will add a new hard drive
    to the root filesystem on LVM (Closes: #23339)

 -- Ryan Niebur <ryan@debian.org>  Wed, 24 Oct 2012 00:10:14 -0700
